[package]
name = "mosaic-testnet-solo-runtime"
version.workspace = true
repository.workspace = true
edition = "2021"
license = "MIT-0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
log = { workspace = true }
sdk = { workspace = true, features = [
	"frame-executive",
	"frame-support",
	"frame-system",
	"frame-try-runtime",
	"pallet-collective",
	"pallet-membership",
	"pallet-preimage",
	"pallet-scheduler",
	"pallet-assets",
	"pallet-aura",
	"pallet-authorship",
	"pallet-balances",
	"pallet-grandpa",
	"pallet-identity",
	"pallet-insecure-randomness-collective-flip",
	"pallet-nfts",
	"pallet-offences",
	"pallet-proxy",
	"pallet-recovery",
	"pallet-session",
	"pallet-timestamp",
	"pallet-transaction-payment",
	"pallet-utility",
	"pallet-parameters",
	"sp-api",
	"sp-block-builder",
	"sp-consensus-aura",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-inherents",
	"sp-offchain",
	"sp-runtime",
	"sp-session",
	"sp-staking",
	"sp-std",
	"sp-storage",
	"sp-transaction-pool",
	"sp-version",
	"sp-genesis-builder",
	"frame-system-rpc-runtime-api",
	"pallet-transaction-payment-rpc-runtime-api",
	"frame-benchmarking",
	"frame-system-benchmarking"
]}

# Local Dependencies
pallet-doas = { workspace = true }
pallet-nft-delegation = { workspace = true }
pallet-nft-permission = { workspace = true }
pallet-nft-staking = { workspace = true }
pallet-validator-subset-selection = { workspace = true }
pallet-im-online = { workspace = true }
pallet-treasury = { workspace = true }
pallet-hold-vesting = { workspace = true }
pallet-airdrop = { workspace = true }
pallet-vesting-to-freeze = { workspace = true }
utils = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { workspace = true, optional = true }

[dev-dependencies]
sdk = { workspace = true, features = ["sp-io"] }

[features]
default = [ "std" ]
build-wasm = [ "dep:substrate-wasm-builder" ]

fast-runtime = []

std = [
	"codec/std",
	"log/std",
	"pallet-airdrop/std",
	"pallet-doas/std",
	"pallet-hold-vesting/std",
	"pallet-im-online/std",
	"pallet-nft-delegation/std",
	"pallet-nft-permission/std",
	"pallet-nft-staking/std",
	"pallet-treasury/std",
	"pallet-validator-subset-selection/std",
	"pallet-vesting-to-freeze/std",
	"scale-info/std",
	"sdk/std",
	"utils/std",
]
runtime-benchmarks = [
	"pallet-doas/runtime-benchmarks",
	"pallet-hold-vesting/runtime-benchmarks",
	"pallet-im-online/runtime-benchmarks",
	"pallet-nft-delegation/runtime-benchmarks",
	"pallet-nft-permission/runtime-benchmarks",
	"pallet-nft-staking/runtime-benchmarks",
	"pallet-treasury/runtime-benchmarks",
	"pallet-validator-subset-selection/runtime-benchmarks",
	"sdk/runtime-benchmarks",
]
try-runtime = [
	"pallet-airdrop/try-runtime",
	"pallet-doas/try-runtime",
	"pallet-hold-vesting/try-runtime",
	"pallet-im-online/try-runtime",
	"pallet-nft-delegation/try-runtime",
	"pallet-nft-permission/try-runtime",
	"pallet-nft-staking/try-runtime",
	"pallet-treasury/try-runtime",
	"pallet-validator-subset-selection/try-runtime",
	"pallet-vesting-to-freeze/try-runtime",
	"sdk/try-runtime",
]
